[package]
name = "connection_server"
version = "0.1.0"
authors = ["kaziu <kaziuxmpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
get_if_addrs = "0.5"
hyper = "0.12"
connection_utils={ path = "../connection_utils" }
