[package]
name = "connection_server"
version = "0.1.0"
authors = ["kaziu <kaziuxmpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
hyper = "0.12"
lazy_static = "1.4"
dirs = "2.0"
connection_utils={ path = "../connection_utils" }
