[package]
name = "connection_utils"
version = "0.1.0"
authors = ["kaziu <kaziuxmpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "0.4"
ansi-escapes = "0.1"
console = "0.8"
ascii = "1.0"